libs/extractor/src/snapshots/extractor__tests__extract_dynamic_style_props_with_type-2.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { Box } from \"@devup-ui/core\";\n<Box padding={data[d as A] as B} />;\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Dynamic(
            ExtractDynamicStyle {
                property: "padding",
                level: 0,
                identifier: "data[d as A]as B",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n<div className=\"OHau79dowmce1hdnrr\" style={{ \"---SUimport_s_x7b__s_x42_ox_s_x7d__sfrom_s_q_x40_devup_dui_lcore_q_x3b__xa__x3c__x42_ox_spadding_x3d__x7b_data_x5b_d_sas_s_x41__x5d__sas_s_x42__x7d__s_l_x3e__x3b__xa_-az\": data[d as A]as B }} />;\n",
}
