libs/extractor/src/snapshots/extractor__tests__extract_enum_style_property-4.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Box} from '@devup-ui/core'\n        <Box positioning={a} w=\"100%\" />\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "bottom",
                value: "0",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "left",
                value: "0",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "right",
                value: "0",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "top",
                value: "0",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "width",
                value: "100%",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui-0.css\";\n<div className={`FLtest_ptsx-OLwidth-v100_c ${{\n\t\"bottom\": \"FLtest_ptsx-OLbottom-v0\",\n\t\"bottom-left\": \"FLtest_ptsx-OLbottom-v0 FLtest_ptsx-OLleft-v0\",\n\t\"bottom-right\": \"FLtest_ptsx-OLbottom-v0 FLtest_ptsx-OLright-v0\",\n\t\"left\": \"FLtest_ptsx-OLleft-v0\",\n\t\"right\": \"FLtest_ptsx-OLright-v0\",\n\t\"top\": \"FLtest_ptsx-OLtop-v0\",\n\t\"top-left\": \"FLtest_ptsx-OLleft-v0 FLtest_ptsx-OLtop-v0\",\n\t\"top-right\": \"FLtest_ptsx-OLright-v0 FLtest_ptsx-OLtop-v0\"\n}[a] || \"\"}`} />;\n",
}
