libs/extractor/src/snapshots/extractor__tests__extract_enum_style_property-5.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Box} from '@devup-ui/core'\n        <Box positioning={a} top=\"0px\" />\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "bottom",
                value: "0",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "left",
                value: "0",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "right",
                value: "0",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "top",
                value: "0",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui-0.css\";\n<div className={`OLtop-v0 ${{\n\t\"bottom\": \"OLbottom-v0\",\n\t\"bottom-left\": \"OLbottom-v0 OLleft-v0\",\n\t\"bottom-right\": \"OLbottom-v0 OLright-v0\",\n\t\"left\": \"OLleft-v0\",\n\t\"right\": \"OLright-v0\",\n\t\"top\": \"OLtop-v0\",\n\t\"top-left\": \"OLleft-v0 OLtop-v0\",\n\t\"top-right\": \"OLright-v0 OLtop-v0\"\n}[a] || \"\"}`} />;\n",
}
